--- a/leo.css
+++ b/leo.css
@@ -1,3 +1,28 @@
-h1 {
+h1 h1 {
+    text-align:center;
+    background-color: aqua;
+}
+h3{
+    background-color: blue;
+}
+
+p {
+    text-align: center;
+    font-size: medium;
+}
+strong {
+    font-size: larger;
+}
+
+body {
+    background-color: blueviolet;
+}
+.unicornio {
+    background-color: aqua
+    color: green
+}
+.brilho {
+    background-color: brown
+}
     
 }
